# fraud-detection-ieee

./: .gitignore  README.md  main.py  pyproject.toml
docs/: xgb-fraud-with-magic-0-9600.ipynb
src/research/fdi/: DataLoader.py  FeatureEngineer.py  FraudDetectionPipeline.py  ModelTrainer.py  config.py
src/research/scripts/: 1_eda.py  2_run_pipeline.py
