[project]
name = "fraud-detection-ieee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autoviz>=0.1.732",
    "black>=25.9.0",
    "catboost>=1.2.8",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
    "ydata-profiling>=4.17.0",
]
